--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -17,14 +17,32 @@ ARG USER_GID=$USER_UID
 # Configure apt and install packages
 RUN apt-get update \
     && apt-get -y install --no-install-recommends apt-utils dialog 2>&1 \
-    # 
-    # Verify git, process tools, lsb-release (useful for CLI installs) installed
+    # \
+    # Verify git, process tools, lsb-release (useful for CLI installs) installed\
     && apt-get -y install git iproute2 procps lsb-release \
-    #
-    # Install C++ tools
-    && apt-get -y install build-essential cmake cppcheck valgrind libcurl4-openssl-dev\
-    #
-    # Create a non-root user to use if preferred - see https://aka.ms/vscode-remote/containers/non-root-user.
+    #\
+    # Install C++ tools\
+        && apt-get -y install build-essential cmake cppcheck valgrind libcurl4-openssl-dev libgsl-dev python3 python3-dev python3-setuptools python3-sympy \
+	       libboost1.67-all-dev \
+           libcln-dev\
+           petsc-dev\
+           slepc-dev\
+           libhdf5-openmpi-dev\
+           libnlopt-dev\
+           libgsl-dev\
+           libnetcdf-dev libgl2ps-dev libglu1-mesa-dev libsm-dev libxt-dev\
+           libfftw3-mpi-dev\
+	       libxml2-dev\
+	       libgmsh-dev\
+	       libtbb-dev\
+	       libann-dev libglpk-dev\
+           libbz2-dev\
+           libbson-dev\
+           libmongoc-dev\
+           libmongoclient-dev           \
+           libglew-dev\
+    #\
+    # Create a non-root user to use if preferred - see https://aka.ms/vscode-remote/containers/non-root-user.\
     && groupadd --gid $USER_GID $USERNAME \
     && useradd -s /bin/bash --uid $USER_UID --gid $USER_GID -m $USERNAME \
     # [Optional] Add sudo support for the non-root user
