--- a/site-dev.yml
+++ b/site-dev.yml
@@ -1,10 +1,12 @@
 site:
   title: Project // Docs
-  start_page: docs:ROOT:index.adoc
+  url: /
+  start_page: myproject:ROOT:index.adoc
 content:
   sources:
-  - url: ./docs
+  - url: .
     branches: master
+    start_path: docs
 ui:
   bundle:
     url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/master/raw/build/ui-bundle.zip?job=bundle-stable
