--- a/docs/site.yml
+++ b/docs/site.yml
@@ -1,10 +1,10 @@
 site:
   title: Project // Docs
-  url: /
-  start_page: myproject:ROOT:index.adoc
+#  url: ../
+#  start_page: myproject:ROOT:index.adoc
 content:
   sources:
-  - url: .
+  - url: ..
     branches: master
     start_path: docs
 ui:
@@ -12,6 +12,10 @@ ui:
     url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/master/raw/build/ui-bundle.zip?job=bundle-stable
     snapshot: true
   supplemental_files: supplemental-ui
+output:
+  clean: true
+  dir: public
+  
 asciidoc:
   attributes:
     project_version: 0.108
