--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,17 @@ name: CI
 on: [push]
 
 jobs:
-  build:
+  build_docs:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: buildkite/trigger-pipeline-action@v1.2.0
+      env:
+        BUILDKITE_API_ACCESS_TOKEN: ${{ secrets.BUILDKITE_API_ACCESS_TOKEN }}
+        PIPELINE: "feelpp/feelpp-docs"
+        COMMIT: "HEAD"
+        BRANCH: "master"
+        MESSAGE: ":github: Triggered from a GitHub Action by Feel++ Template Project"
+  build_code:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
