--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,39 +5,39 @@ on: [push]
 jobs:
   build_docs:
     runs-on: ubuntu-latest
+    container: feelpp/feelpp-project
+    if: "!contains(github.event.head_commit.message, 'ci skip')"
     steps:
-    - uses: buildkite/trigger-pipeline-action@v1.2.0
-      env:
-        BUILDKITE_API_ACCESS_TOKEN: ${{ secrets.BUILDKITE_API_ACCESS_TOKEN }}
-        PIPELINE: "feelpp/feelpp-docs"
-        COMMIT: "HEAD"
-        BRANCH: "master"
-        MESSAGE: ":github: Triggered from a GitHub Action by Feel++ Template Project"
+    - uses: actions/checkout@v2
+    - name: Build
+      run: echo "Hi!"
   build_code:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
+    container: feelpp/feelpp-project
+    if: "!contains(github.event.head_commit.message, 'ci skip')"
     steps:
     - uses: actions/checkout@v2
       with:
         lfs: true
-    - name: Build MyProject
-      run: |
-        mkdir build && cd build
-        CXX=clang++-9 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=./install ..
-        make -j3
-        make install
-    - name: Check build
-      run: |
-        mkdir check && cd check
-        mpirun --bind-to core --mca btl vader,self -np 4 ../bin/feelpp_p_myapp 
-      working-directory: build/install
-    - name: Package
-      run: |
-        make package
-        mkdir artifact && cp myproject*.tar.gz artifact
-        ls -l artifact
-        tar tzvf myproject*.tar.gz
-      working-directory: build
-#    - name: Upload artifact
+#    - name: Build MyProject
+#      run: |
+#        mkdir build && cd build
+#        CXX=clang++-9 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=./install ..
+#        make -j3
+#        make install
+#    - name: Check build
+#      run: |
+#        mkdir check && cd check
+#        mpirun --bind-to core --mca btl vader,self -np 4 ../bin/feelpp_p_myapp 
+#      working-directory: build/install
+#    - name: Package
+#      run: |
+#        make package
+#        mkdir artifact && cp myproject*.tar.gz artifact
+#        ls -l artifact
+#        tar tzvf myproject*.tar.gz
+#      working-directory: build
+##    - name: Upload artifact
 #      uses: actions/upload-artifact@v1.0.0
 #      with:
 #        # Artifact name
