--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,4 +17,14 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build . --file Dockerfile --tag feelpp/feelpp-project
+    -
+      name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}  
+    - name: Push
+      run:
         docker push feelpp/feelpp-project
+          
+
