--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,11 @@ jobs:
     - uses: actions/checkout@v2
       with:
         lfs: true
+    - name: install
+      run: |
+        apt install python3-pandas python3-pip
+        
+
 #    - name: Build MyProject
 #      run: |
 #        mkdir build && cd build
