--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,8 @@ jobs:
         lfs: true
     - name: install
       run: |
-        apt install python3-pandas python3-pip
+        apt -y update 
+        apt -yq install python3-pandas python3-pip
         
 
 #    - name: Build MyProject
