--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,50 +3,129 @@ name: CI
 on: [push]
 
 jobs:
+
+  activate:
+    runs-on: ubuntu-latest
+    if: |
+      github.repository == 'feelpp/feelpp-project' &&
+      !startsWith(github.event.head_commit.message, 'Release ') &&
+      !contains(github.event.head_commit.message, 'ci skip')
+    steps:
+    - run: echo ok go
+
   build_docs:
+    needs: activate
     runs-on: ubuntu-latest
     container: feelpp/feelpp-project
-    if: "!contains(github.event.head_commit.message, 'ci skip')"
+    if: "!contains(github.event.head_commit.message, 'docs skip')"
     steps:
     - uses: actions/checkout@v2
     - name: Build
       run: echo "Hi!"
+
   build_code:
+    needs: activate
     runs-on: ubuntu-latest
     container: feelpp/feelpp-project
-    if: "!contains(github.event.head_commit.message, 'ci skip')"
+    steps:
+    - 
+      uses: actions/checkout@v2
+      with:
+        lfs: true
+    - 
+      name: install
+      run: |
+        apt -y update 
+        apt -yq install npm ython3-pandas python3-pip
+    - 
+      name: Update feelpp
+      run: |
+        sudo apt update
+        sudo apt --reinstall install -y libfeelpp1 libfeelpp-dev feelpp-tools python3-feelpp python3-mpi4py
+    - 
+      name: Build MyProject
+      run: |
+        rm -rf build
+        mkdir build && cd build
+        CXX=clang++ ../configure -r --prefix=$PWD/install
+        make -j5
+        make install
+    - 
+      name: Check build
+      run: |
+        mpirun --bind-to core --mca btl vader,self -np 4 install/bin/feelpp_p_myapp 
+      working-directory: build/
+    - 
+      name: Package
+      run: |
+        make package
+      working-directory: build
+    - name: Upload 
+      uses: actions/upload-artifact@v2
+      with:
+        # Artifact name
+        name: feelpp-project-artifacts
+        # Directory containing files to upload
+        path: build/assets/myproject-*
+
+  check:
+    needs: build
+    runs-on: ubuntu-20.04
+    name: Check Build, Install, Run
+    steps:
+    - name: Install feelpp
+      uses: feelpp/action-install-feelpp@main
+      with:
+          repo: deb https://dl.bintray.com/feelpp/ubuntu focal latest
+    - name: Download 
+      uses: actions/download-artifact@v2
+      with:
+        # Artifact name
+        name: feelpp-project-artifacts
+        # Directory containing files to upload
+        path: build/assets/
+    - name: Display Artifact
+      run: ls -R
+      working-directory: build/assets
+    - name: Install polymap
+      run: sudo dpkg -i build/assets/*.deb
+
+  deliver:
+    runs-on: ubuntu-20.04
+    needs: check
+    name: Docker Build, Tag, Push
+
     steps:
     - uses: actions/checkout@v2
       with:
         lfs: true
-    - name: install
-      run: |
-        apt -y update 
-        apt -yq install python3-pandas python3-pip
+    
+    - name: Download 
+      uses: actions/download-artifact@v2
+      with:
+        # Artifact name
+        name: feelpp-project-artifacts
+        path: artifacts/
+    -
+      name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+    -
+      name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1        
+    - 
+      name: Login to GitHub Container Registry
+      uses: docker/login-action@v1 
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.CR_PAT }}
+    - 
+      name: Build container image
+      uses: docker/build-push-action@v2
+      with: 
+        context: artifacts
+        repository: feelpp/feelpp-project
+        tags: ghcr.io/feelpp/feelpp-project:latest
+        file: ./Dockerfile
+        push: true
         
-
-#    - name: Build MyProject
-#      run: |
-#        mkdir build && cd build
-#        CXX=clang++-9 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=./install ..
-#        make -j3
-#        make install
-#    - name: Check build
-#      run: |
-#        mkdir check && cd check
-#        mpirun --bind-to core --mca btl vader,self -np 4 ../bin/feelpp_p_myapp 
-#      working-directory: build/install
-#    - name: Package
-#      run: |
-#        make package
-#        mkdir artifact && cp myproject*.tar.gz artifact
-#        ls -l artifact
-#        tar tzvf myproject*.tar.gz
-#      working-directory: build
-##    - name: Upload artifact
-#      uses: actions/upload-artifact@v1.0.0
-#      with:
-#        # Artifact name
-#        name: MyProject-${{ runner.os }} 
-#        # Directory containing files to upload
-#        path: build/install/
