--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
   build_docs:
     needs: activate
     runs-on: ubuntu-latest
-    container: feelpp/feelpp-project
+    name: Build, Install, Package documentation
     if: "!contains(github.event.head_commit.message, 'docs skip')"
     steps:
     - uses: actions/checkout@v2
@@ -26,7 +26,7 @@ jobs:
   build_code:
     needs: activate
     runs-on: ubuntu-latest
-    container: feelpp/feelpp-project
+    name: Build, Install, Package code
     steps:
     - 
       uses: actions/checkout@v2
@@ -69,7 +69,7 @@ jobs:
         path: build/assets/myproject-*
 
   check:
-    needs: build
+    needs: build_code
     runs-on: ubuntu-20.04
     name: Check Build, Install, Run
     steps:
@@ -87,7 +87,7 @@ jobs:
     - name: Display Artifact
       run: ls -R
       working-directory: build/assets
-    - name: Install polymap
+    - name: Install Project
       run: sudo dpkg -i build/assets/*.deb
 
   deliver:
