--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,11 @@ jobs:
     if: "!contains(github.event.head_commit.message, 'docs skip')"
     steps:
     - uses: actions/checkout@v2
+    - 
+      name: install
+      run: |
+        sudo apt -y update 
+        sudo apt -yq install npm ython3-pandas python3-pip
     - name: Build
       run: echo "Hi!"
 
@@ -32,12 +37,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         lfs: true
-    - 
-      name: install
-      run: |
-        apt -y update 
-        apt -yq install npm ython3-pandas python3-pip
-    - 
+        - 
       name: Update feelpp
       run: |
         sudo apt update
