--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
       run: |
         rm -rf build
         mkdir build && cd build
-        CXX=clang++ ../configure -r --prefix=$PWD/install
+        CXX=clang++ cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=$PWD/install ..
         make -j5
         make install
     - 
