--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
     - 
       name: Check build
       run: |
-        mpirun --bind-to core --mca btl vader,self -np 4 --oversubscribe install/bin/feelpp_p_myapp 
+        mpirun --mca btl vader,self -np 2 --oversubscribe  install/bin/feelpp_p_myapp 
       working-directory: build/
     - 
       name: Package
