--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,16 @@ jobs:
       !startsWith(github.event.head_commit.message, 'Release ') &&
       !contains(github.event.head_commit.message, 'ci skip')
     steps:
+    - run: echo ok go
+    
+
+  build_docs:
+    needs: activate
+    runs-on: ubuntu-latest
+    name: Build, Install, Package documentation
+    if: "!contains(github.event.head_commit.message, 'docs skip')"
+    steps:
+    - uses: actions/checkout@v2
     - name: Install credentials
       run: echo https://$GITHUB_OAUTH:@github.com > $HOME/.git-credentials
       env:
@@ -27,20 +37,6 @@ jobs:
           BRANCH: gh-pages # The branch the action should deploy to.
           FOLDER: docs/public # The folder the action should deploy.
 
-  build_docs:
-    needs: activate
-    runs-on: ubuntu-latest
-    name: Build, Install, Package documentation
-    if: "!contains(github.event.head_commit.message, 'docs skip')"
-    steps:
-    - uses: actions/checkout@v2
-    - 
-      name: install
-      run: |
-        sudo apt -y update 
-        sudo apt -yq install npm python3-pandas python3-pip
-    - name: Build
-      run: echo "Hi!"
 
   build_code:
     needs: activate
