--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,8 +40,9 @@ jobs:
 
   build_code:
     needs: activate
-    runs-on: ubuntu-20.04
+    runs-on: self-hosted
     name: Build, Install, Package code
+    if: "!contains(github.event.head_commit.message, 'code skip')"
     steps:
     - 
       uses: actions/checkout@v2
