enable / disable toolboxes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ if (POLICY CMP0077)
 endif()
 
 
-OPTION(USE_FEELPP_TOOLBOXES "Enable Feel++ Toolboxes" OFF)
+OPTION(USE_FEELPP_TOOLBOXES "Enable Feel++ Toolboxes" ON)
 
 if ( ${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_SOURCE_DIR} )
   if ( USE_FEELPP_TOOLBOXES )
