--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,44 +8,24 @@ on:
 jobs:
 
   create-release-artifacts:
-    runs-on: self-hosted
+    runs-on: self-ubuntu-22.04
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.3.4
+        uses: actions/checkout@v3
         with:
           lfs: true
-
-#      - name: Changelog Generator
-#        id: changelog
-#        uses: timfallmk/github-changelog-generator-action@0.0.2
-#        with:
-#          github-token: ${{ secrets.GITHUB_TOKEN }}
+          submodules: 'recursive'
         
       - name: Build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CHANGELOG_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          mkdir build && cd build
-          CXX=clang++-8 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=./install ..
-          make -j3
-          make install
-          make package
-          mkdir artifact && cp myproject*.tar.gz artifact
-          github_changelog_generator -u feelpp -p feelpp-project 
-          cp CHANGELOG.md artifact
-#          echo ${{ steps.changelog.outputs.changelog }} > artifact/CHANGELOG.md
-          
-      - name: Read CHANGELOG
-        id: changelog
-        run: |
-          body=$(cat dist/CHANGELOG.md)
-          body="${body//'%'/'%25'}"
-          body="${body//$'\n'/'%0A'}"
-          body="${body//$'\r'/'%0D'}"
-          echo $body
-          echo "::set-output name=BODY::$body"
+          cmake --preset default
+          cmake --build --preset default -t install
+          cmake --build --preset default -t package
+
 
       - name: Create Github Release
         id: create_release
@@ -55,7 +35,6 @@ jobs:
         with:
           tag_name: ${{ github.ref }}
           release_name: ${{ github.ref }}
-          body: ${{ steps.changelog.outputs.BODY }}
           draft: false
           prerelease: false
 
@@ -63,6 +42,6 @@ jobs:
         uses: svenstaro/upload-release-action@v1-release
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: dist/myproject*
+          file: build/default/assets/myproject*
           tag: ${{ github.ref }}
           file_glob: true
