--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,6 @@ jobs:
           cmake --build --preset default 
           cmake --build --preset default -t package
 
-
       - name: Create Github Release
         id: create_release
         uses: actions/create-release@master
@@ -45,3 +44,38 @@ jobs:
           file: build/default/assets/myproject*
           tag: ${{ github.ref }}
           file_glob: true
+
+      -
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            ghcr.io/feelpp/feelpp-project
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1.1.0
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1.3.0        
+      - 
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v1.9.0 
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }}
+      - 
+        name: Build container image
+        uses: docker/build-push-action@v2
+        with: 
+          context: build/default/assets/
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          file: ./Dockerfile    
