--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,19 +3,9 @@ name: CI
 on: [push]
 
 jobs:
-  activate:
-    runs-on: ubuntu-latest
-    if: |
-      github.repository == 'feelpp/feelpp-project' &&
-      !startsWith(github.event.head_commit.message, 'Release ') &&
-      !contains(github.event.head_commit.message, 'ci skip')
-    steps:
-    - run: echo ok go
-    
 
   build_docs:
-    needs: activate
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: Build, Install, Package documentation
     if: "!contains(github.event.head_commit.message, 'docs skip')"
     steps:
@@ -30,7 +20,7 @@ jobs:
         npm run antora
       working-directory: docs
     - name: Deploy
-      uses: JamesIves/github-pages-deploy-action@4.1.4
+      uses: JamesIves/github-pages-deploy-action@4
       with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
@@ -38,7 +28,6 @@ jobs:
 
 
   build_code:
-    needs: activate
     runs-on: self-ubuntu-22.04
     name: Build, Install, Package code
     if: "!contains(github.event.head_commit.message, 'code skip')"
@@ -54,7 +43,7 @@ jobs:
         cmake --preset default
         cmake --build --preset default
     - 
-      name: Check build
+      name: Check 
       run: |
         ctest --preset default
     - 
@@ -62,7 +51,7 @@ jobs:
       run: |
         cmake --build --preset default -t package
     - name: Upload 
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         # Artifact name
         name: feelpp-project-artifacts
@@ -71,11 +60,11 @@ jobs:
 
   check:
     needs: build_code
-    runs-on: ubuntu-20.04
+    runs-on: self-ubuntu-22.04
     name: Check Build, Install, Run
     steps:
     - name: Download 
-      uses: actions/download-artifact@v2
+      uses: actions/download-artifact@v3
       with:
         # Artifact name
         name: feelpp-project-artifacts
@@ -86,7 +75,7 @@ jobs:
       working-directory: build/default/assets
 
   deliver:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     needs: check
     name: Docker Build, Tag, Push
 
@@ -96,7 +85,7 @@ jobs:
         lfs: true
         submodules: 'recursive'
     - name: Download 
-      uses: actions/download-artifact@v2
+      uses: actions/download-artifact@v3
       with:
         # Artifact name
         name: feelpp-project-artifacts
@@ -115,20 +104,20 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
     -
       name: Set up QEMU
-      uses: docker/setup-qemu-action@v1.1.0
+      uses: docker/setup-qemu-action@v2
     -
       name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1.3.0        
+      uses: docker/setup-buildx-action@v2
     - 
       name: Login to GitHub Container Registry
-      uses: docker/login-action@v1.9.0 
+      uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.repository_owner }}
         password: ${{ secrets.CR_PAT }}
     - 
       name: Build container image
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v4
       with: 
         context: artifacts
         push: ${{ github.event_name != 'pull_request' }}
