--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -1,6 +1,6 @@
 name: template_project
 title: Feel++ Templace Project
-version: '1.0.3'
+version: {project_version}
 start_page: ROOT:index.adoc
 nav:
 - modules/ROOT/nav.adoc
