--- a/docs/package.json
+++ b/docs/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "feelpp-project",
   "description": "The Feelpp documentation",
-  "version": "0.1.0",
+  "version": "1.0.4",
   "license": "AGPL-3.0",
   "author": "The Feelpp Team",
   "homepage": "https://github.com/feelpp/feelpp-project#readme",
@@ -27,8 +27,10 @@
     "linkcheck": "broken-link-checker --filter-level 3 --recursive --verbose"
   },
   "dependencies": {
-    "@antora/cli": "^2.3.4",
-    "@antora/site-generator-default": "^2.3.4"
+    "@antora/cli": "^3.1",
+    "@antora/site-generator-default": "^3.1",
+    "handlebars": "^4.7.7",
+    "handlebars-utils": "^1.0.6"
   },
   "devDependencies": {
     "broken-link-checker": "^0.7.8",
