--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -1,5 +1,5 @@
-name: template_project
-title: Feel++ Templace Project
+name: feelpp_project
+title: Feel++ Project
 version: ~
 start_page: ROOT:index.adoc
 nav:
