--- a/docs/site.yml
+++ b/docs/site.yml
@@ -17,6 +17,7 @@ output:
   
 asciidoc:
   attributes:
+    project_name: Feel++ Project
     project_version: 2.0.0
     deploymentRoot: ""
     numbered: true
