automatically rename project when used as template closes #91

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches: 
       - '**' # Push events on all branches
+    paths-ignore:
+      - '.github/workflows/init.yml'
     tags:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10 including semver
 
@@ -51,6 +53,9 @@ jobs:
       name: Check 
       run: |
         ctest --preset default
+      env:
+        OMPI_ALLOW_RUN_AS_ROOT: 1 
+        OMPI_ALLOW_RUN_AS_ROOT_CONFIRM: 1
     - 
       name: Package
       run: |
