up token in docs
code skip

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install credentials
       run: echo https://$GITHUB_OAUTH:@github.com > $HOME/.git-credentials
       env:
-        GITHUB_OAUTH: ${{ secrets.DOCS_GITHUB_KEY }}
+        GITHUB_OAUTH: ${{ secrets.CR_PAT_WORKFLOW }}
     - name: Build
       run: |
         npm install
