--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
   },
   "dependencies": {
     "@antora/cli": "^3.1",
-    "@antora/site-generator-default": "^3.1",
-    "handlebars": "^4.7.7",
-    "handlebars-utils": "^1.0.6",
     "@antora/collector-extension": "^1.0.0-alpha.3",
-    "asciidoctor-jupyter": "^0.4.0"
+    "@antora/site-generator-default": "^3.1",
+    "@asciidoctor/core": "^2.2.6",
+    "asciidoctor": "^2.2.6",
+    "asciidoctor-jupyter": "^0.4.0",
+    "asciidoctor-kroki": "^0.16.0",
+    "handlebars": "^4.7.7",
+    "handlebars-utils": "^1.0.6"
   },
   "devDependencies": {
     "broken-link-checker": "^0.7.8",
