--- a/site.yml
+++ b/site.yml
@@ -1,7 +1,7 @@
 site:
-  title: Feel++ Template Project // Docs
+  title: Feel++ Project // Docs
   url: https://feelpp.github.io/feelpp-project/
-  start_page: template_project:ROOT:index.adoc
+  start_page: feelpp-project:ROOT:index.adoc
 content:
   sources:
   - url: https://github.com/feelpp/feelpp-project
