Simplify documentation architecture
- remove docs/supplemental-ui
- remove the nested navigation
- remove the documentation versioning (keeps the `project_version` attribute)
- use start instead of serve (standard name, can be executed with: `npm start`)
- remove -redirect-facility disabled to generate an index.html file at the root

--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -1,7 +1,7 @@
 name: feelpp-project
-title: Feel++ Project
-version: 2.0.2
-start_page: ROOT:index.adoc
+title: Feel++ Template Project
+version: ~
+start_page: index.adoc
 nav:
 - modules/ROOT/nav.adoc
 ext:
