--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,6 +6,7 @@
 		"ms-vscode.cpptools",
 		"ms-vscode.cmake-tools",
 		"josetr.cmake-language-support-vscode",
-		"asciidoctor.asciidoctor-vscode"
+		"asciidoctor.asciidoctor-vscode",
+		"ms-python.python"
 	]
 }
