--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,7 @@
 		"ms-vscode.cmake-tools",
 		"josetr.cmake-language-support-vscode",
 		"asciidoctor.asciidoctor-vscode",
-		"ms-python.python"
+		"ms-python.python",
+		"ms-toolsai.jupyter"
 	]
 }
