--- a/site.yml
+++ b/site.yml
@@ -1,5 +1,5 @@
 site:
-  title: Feel++ Project
+  title: Feel++ Template Project
   url: https://feelpp.github.io/feelpp-project/
   start_page: feelpp-project::index.adoc
 content:
@@ -23,7 +23,7 @@ antora:
   - '@antora/collector-extension'
 asciidoc:
   attributes:
-    project_name: Feel++ Project
+    project_name: Feel++ Template Project
     project_version: 2.0.2
     numbered: true
     allow-uri-read: true
