--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "feelpp-project",
   "description": "The Feel++ Template Project documentation",
-  "version": "2.0.2",
+  "version": "2.1.0",
   "license": "AGPL-3.0",
   "author": "The Feel++ Template Project Team",
   "homepage": "https://github.com/feelpp/feelpp-project#readme",
@@ -34,13 +34,14 @@
     "asciidoctor": "^2.2.6",
     "asciidoctor-jupyter": "^0.5.0",
     "asciidoctor-kroki": "^0.17.0",
-    "handlebars": "^4.7.7",
-    "handlebars-utils": "^1.0.6"
+    "handlebars": "^4.7.8",
+    "handlebars-utils": "^1.0.6",
+    "@feelpp/asciidoctor-extensions": "1.0.0-rc.5"
   },
   "devDependencies": {
     "broken-link-checker": "^0.7.8",
     "http-server": "^14.1.1",
-    "write-good": "^0.13.1"
+    "write-good": "^1.0.8"
   },
   "keywords": [
     "antora",
