--- a/site.yml
+++ b/site.yml
@@ -22,6 +22,8 @@ antora:
   extensions:
   - '@antora/collector-extension'
 asciidoc:
+  extensions:
+  - '@feelpp/asciidoctor-extensions'
   attributes:
     project_name: Feel++ Template Project
     project_version: 2.0.2
