--- a/site.yml
+++ b/site.yml
@@ -8,7 +8,7 @@ content:
     branches: HEAD
     start_path: docs
   - url: https://github.com/feelpp/antora-ui
-    branches: HEAD
+    branches: main
     start_path: docs
 ui:
   supplemental_files: ./docs/antora/supplemental-ui
@@ -24,18 +24,3 @@ antora:
 asciidoc:
   extensions:
   - '@feelpp/asciidoctor-extensions'
-  attributes:
-    project_name: Feel++ Template Project
-    project_version: 2.0.2
-    numbered: true
-    allow-uri-read: true
-    hide-uri-scheme: true
-    feelpp: Feel++
-    angiotk: AngioTK
-    4fastsim: 4FastSim
-    stem: latexmath
-    hemotumpp: Hemotum++
-    eye2brain: Eye2Brain
-    swimmer: Swimmer
-    python: Python
-    cpp: C++
