--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -5,6 +5,13 @@ start_page: index.adoc
 asciidoc:
   attributes:
     project_name: Feel++ Template Project
+    numbered: true
+    allow-uri-read: true
+    hide-uri-scheme: true
+    feelpp: Feel++
+    stem: latexmath
+    python: Python
+    cpp: C++
 ext:
   collector:
     - run:
