--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,33 +6,16 @@ on:
       - '**' # Push events on all branches
     paths-ignore:
       - '.github/workflows/init.yml'
+      - 'docs/**'
+      - 'package*.json'
+      - 'site.yml'
+      - 'generate-jupyter.sh'
+      - 'netlify*'
+      - '.github/workflows/docs.yml'
     tags:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10 including semver
 
 jobs:
-
-  build_docs:
-    runs-on: ubuntu-22.04
-    name: Build, Install, Package documentation
-    if: "!contains(github.event.head_commit.message, 'docs skip')"
-    steps:
-    - uses: actions/checkout@v3
-    - name: Install credentials
-      run: echo https://$GITHUB_OAUTH:@github.com > $HOME/.git-credentials
-      env:
-        GITHUB_OAUTH: ${{ secrets.CR_PAT_WORKFLOW }}
-    - name: Build
-      run: |
-        npm install
-        npm run antora
-      working-directory: docs
-    - name: Deploy
-      uses: JamesIves/github-pages-deploy-action@v4
-      with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: public # The folder the action should deploy.
-
 
   build_code:
     runs-on: self-ubuntu-22.04
