--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,6 +11,7 @@ on:
       - 'generate-jupyter.sh'
       - 'netlify*'
       - '.github/workflows/docs.yml'
+      - 'requirements.txt'
       - '!.github/workflows/ci.yml'
       - '!.github/workflows/init.yml'
     tags:
@@ -20,7 +21,7 @@ jobs:
 
   docs:
     runs-on: ubuntu-22.04
-    name: Build, Install, Package documentation
+    name: Build Antora Site
     if: "!contains(github.event.head_commit.message, 'docs skip')"
     steps:
     - uses: actions/checkout@v3
@@ -28,12 +29,19 @@ jobs:
       run: echo https://$GITHUB_OAUTH:@github.com > $HOME/.git-credentials
       env:
         GITHUB_OAUTH: ${{ secrets.CR_PAT_WORKFLOW }}
-    - name: Build
+    - name: Install NPM dependencies
+      run: npm install
+    - name: Install Python dependencies
       run: |
-        npm install
-        npm run antora
-      working-directory: docs
+          python -m venv --system-site-packages .venv
+          source .venv/bin/activate
+          pip install -r requirements.txt        
+    - name: Build Antora Site
+      run: |
+          source .venv/bin/activate
+          npm run antora
     - name: Deploy
+      if: ${{ github.ref_name == 'master' }}
       uses: JamesIves/github-pages-deploy-action@v4
       with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
