add support for python bindings #122
- use scikit-build to build python wheel
- transform runLaplacian into a class Laplacian

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "C_Cpp.default.configurationProvider": "vector-of-bool.cmake-tools",
-    "cmake.buildDirectory": "${workspaceFolder}/build-${variant:buildType}"
+    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
 }
